data/all_generated_tests/raw_wast_tests/br_EdgeCaseFailuresinbr_table_1154.wast
;; 5. **Test Description**: A `br_table` with the maximum possible index value for an unsigned integer.    - **Constraint Checked**: Ensures that the implementation can handle the upper limits of index values.    - **Edge Case Relation**: Tests the behavior of the implementation when indexing at maximum integer bounds.

(assert_invalid
  (module (func $max-index-br_table
    (block (br_table 0 0xffffffff (i32.const 1)))
  ))
  "unknown label"
)